tests/expectations/compiler/function/no_transition_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {
     | ^^^^^^^^^^^^
"""]
